--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -5,6 +5,10 @@
     <title>Portfolio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Passionate software developer with a love for innovation. Explore my projects in web and mobile development. Let's build something amazing together!"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
